--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     
     <script>
-    $(document).ready(function(){    var meeple = new Image(150, 150);
-    meeple.src = "https://photos-6.dropbox.com/t/2/AABWqyN6Ng-2Me6cCui62k7RmhMxxgwD6EKxvXqODSnKwg/12/422841906/png/32x32/1/_/1/2/Meeple.png/CLKc0MkBIAIoAg/1QUKur21Kfrw201fhUOZ9YChlUPFN8g1vUjjRPq1GAY?size=1024x768&size_mode=2"
-      $("#meeples").getContext("2d").drawImage(meeple, 0, 0);});
+    $(document).ready(function(){    
+      var meeple = new Image(150, 150);
+      meeple.src = "https://cloud.githubusercontent.com/assets/13082525/8506398/d6802b7c-21df-11e5-929f-1c47137e68f2.png";
+      $("#meeples").getContext("2d").drawImage(meeple, 0, 0);
+    });
     </script>
   </html>
 </DOCTYPE>
