--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     $(document).ready(function(){    
       var meeple = new Image(150, 150);
       meeple.src = "https://cloud.githubusercontent.com/assets/13082525/8506398/d6802b7c-21df-11e5-929f-1c47137e68f2.png";
-      $("#meeples").getContext("2d").drawImage(meeple, 0, 0);
+      $("#meeples").drawImage(meeple, 0, 0);
     });
     </script>
   </html>
