--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       var meeple = new Image(150, 150);
       meeple.src = "https://cloud.githubusercontent.com/assets/13082525/8506398/d6802b7c-21df-11e5-929f-1c47137e68f2.png";
       var canvas = document.getElementById("meeple");
-      var canvasContext = c.getContext("2d");
+      var canvasContext = canvas.getContext("2d");
       canvasContext.drawImage(meeple, 0, 0);
     });
     </script>
