--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     $(document).ready(function(){    
       var meeple = new Image(150, 150);
       meeple.src = "https://cloud.githubusercontent.com/assets/13082525/8506398/d6802b7c-21df-11e5-929f-1c47137e68f2.png";
-      var canvas = document.getElementById("meeple");
+      var canvas = document.getElementById("meeples");
       var canvasContext = canvas.getContext("2d");
       canvasContext.drawImage(meeple, 0, 0);
     });
